# hireflow

./: .gitignore  README.md  pyproject.toml
backend/: ai_parser.py  config.py  database.py  gmail_auth.py  gmail_fetch.py  main.py  models.py
backend/routers/: applications.py  auth.py  dashboard.py  sync.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ActivityChart.tsx  ApplicationTable.tsx  EventTimeline.tsx  Filters.tsx  FunnelChart.tsx  Layout.tsx  RecentActivity.tsx  StatsCards.tsx  StatusDistribution.tsx  SyncButton.tsx  TimelineChart.tsx
frontend/src/pages/: ApplicationDetailPage.tsx  ApplicationsPage.tsx  DashboardPage.tsx  EmailReviewPage.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
